fixes audio and scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6110,7 +6110,8 @@ a:hover {
 
 /*  --  Navbar  --  */
 .navbar-custom {
-  margin-bottom: 7.5%; }
+  height: 7.5vh;
+  margin-bottom: 7.5vh; }
   .navbar-custom .bg-custom {
     background-color: white; }
   .navbar-custom .navbar-nav li h2 a.active {
@@ -6139,7 +6140,7 @@ footer {
 span.bullet {
   height: 1rem;
   width: 1rem;
-  margin: 1rem;
+  margin: .5rem .25rem;
   border-radius: 100%;
   background: #ff0000;
   display: block; }
@@ -6167,6 +6168,24 @@ span.bullet {
 
 span.text-note {
   background-color: rgba(255, 0, 0, 0.16); }
+
+section.text .text-column, section.text .text-notes {
+  height: 50vh;
+  overflow-y: scroll;
+  overflow-x: hidden; }
+  section.text .text-column ul, section.text .text-notes ul {
+    margin-left: 0;
+    padding-left: 0; }
+
+section.text .text-column::-webkit-scrollbar-track, section.text .text-notes::-webkit-scrollbar-track {
+  background-color: #fff;
+  border-right: solid 1px #ff0000; }
+
+section.text .text-column::-webkit-scrollbar, section.text .text-notes::-webkit-scrollbar {
+  width: 10px; }
+
+section.text .text-column::-webkit-scrollbar-thumb, section.text .text-notes::-webkit-scrollbar-thumb {
+  background-color: #ff0000; }
 
 #player {
   height: 212.5px; }
