--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -79,7 +79,8 @@ a:hover{
 }
 /*  --  Navbar  --  */
 .navbar-custom{
-    margin-bottom: 7.5%;
+    height:  7.5vh;
+    margin-bottom: 7.5vh;
     .bg-custom{
         background-color: white;
     }
@@ -131,7 +132,7 @@ footer{
 span.bullet{
     height: 1rem;
     width: 1rem;
-    margin: 1rem;
+    margin: .5rem .25rem;
     //padding: 1rem;
     border-radius: 100%;
     background: map-get($colors, primary);
@@ -167,4 +168,34 @@ span.bullet{
 
 span.text-note{
     background-color:rgba(map-get($colors, primary),.16);
+}
+
+section.text .text-column, section.text .text-notes{
+    height: 50vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    ul{
+        margin-left: 0;
+        padding-left: 0;
+    } 
+}
+
+
+section.text .text-column::-webkit-scrollbar-track, section.text .text-notes::-webkit-scrollbar-track
+{
+	//-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #fff;
+    border-right: solid 1px #ff0000;
+}
+
+section.text .text-column::-webkit-scrollbar, section.text .text-notes::-webkit-scrollbar
+{
+	width: 10px;
+	
+}
+
+section.text .text-column::-webkit-scrollbar-thumb, section.text .text-notes::-webkit-scrollbar-thumb
+{
+	background-color: #ff0000;
+
 }
